# lab07

./: CMakeLists.txt
Bible/: kub.h
source/: kub.cpp
